test/scc_test/exp/semantic-errors/087.a
087.t:4:8: error: invalid operands to binary '>='